Fix minor annoyances: checkboxes are not correctly vertically aligned with their labels, and radio and checkbox labels should not be bold because they don't need to stand out.
Conflicts:

	portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css

--- a/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
@@ -786,3 +786,14 @@ input[type="text"], input[type="password"], select, textarea, .textarea, #breadc
 	@include filter-gradient(#427EAD, #154B75);
 	@include background-image(linear-gradient(#427EAD, #154B75));
 }
+
+.aui-field-choice {
+	.aui-field-label,
+	.aui-field-label-inline-label {
+		font-weight: normal;
+	}
+
+	.aui-field-input-choice {
+		float: none;
+	}
+}
